--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,11 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/component/*": ["./src/components/*"],
+      "@/templates/*": ["./src/components/templates/*"],
+      "@/img/*": ["./src/assets/img/*"],
+      "@/styles/*": ["./src/styles/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
